--- a/ChangeLog
+++ b/ChangeLog
@@ -4,3 +4,5 @@
 2004-04-08
 	* mod_chroot/0.2 - no getppid() heuristics when EAPI is available.
 
+2004-11-31
+	* mod_chroot/0.3 - with Apache 2.0 support
