--- a/INSTALL
+++ b/INSTALL
@@ -14,11 +14,11 @@ Building mod_chroot: Apache 1.3 static module
 
     1. Go to Apache source directory and type
 
- ./configure --add-module /usr/src/mod_chroot-x.y/mod_chroot.c
+ ./configure --add-module /usr/src/mod_chroot-x.y/src/mod_chroot13.c
 
        or, if you applied EAPI patches, use
 
- ./configure --enable-rule=eapi --add-module /usr/src/mod_chroot-x.y/mod_chroot.c
+ ./configure --enable-rule=eapi --add-module /usr/src/mod_chroot-x.y/src/mod_chroot13.c
 
        Replace /usr/src with a directory where you unpacked the tarball. Add
        other configure options if needed.
@@ -44,7 +44,25 @@ Building mod_chroot: Apache 1.3 dynamic module (DSO)
 
  apachectl start
 
-Configuration
+Building mod_chroot: Apache 2.0 dynamic module (DSO)
+
+   You will need apxs (shipped as apxs2 by some distributors) and Apache
+   headers. If you compiled Apache from source you already have these
+   headers. If you use Debian, you need to install apache2-prefork-dev or
+   apache2-threaded-dev.
+
+    1. Go to mod_chroot source directory and type:
+
+ apxs -cia mod_chroot.c
+
+       Yes, that's the same source file as for Apache 1.3. Your Apache
+       version will be detected automagically, just remember to use the right
+       apxs if you have both Apache 1.3 and Apache 2.0 installed.
+    2. Start Apache
+
+ apachectl start
+
+Configuration (Apache 1.3 and Apache 2.0)
 
    mod_chroot provides only one configuration directive - ChrootDir. It can
    only be used in main server configuration. You can't put ChrootDir inside
@@ -58,7 +76,13 @@ Configuration
    DocumentRoot pointing to "/var/www", you should now change it to "/" -
    otherwise Apache will be looking for "/var/www" inside of your root.
 
+   If you're using mod_chroot with Apache 2, you'll probably have to tweak
+   your httpd.conf a little more. Please read Apache 2.0 notes.
+
 Module ordering
+
+   This section only applies to Apache 1.3. Apache 2.0 handles module
+   ordering internally
 
    Apache needs access to the whole filesystem during startup. That's why
    mod_chroot must be loaded as the last one - after all other modules are
@@ -85,5 +109,3 @@ Module ordering
    You can get a list of all builtin modules with
 
  httpd -l
-
-
