--- a/ChangeLog
+++ b/ChangeLog
@@ -19,12 +19,16 @@
 	  Patch by <clement.hermann*free.fr>, thanks!
 	* updated documentation
 	* released mod_chroot/0.5
-2006-12-26	Mathieu CARBONNEAUX
-	* released mod_chroot/0.6 for apache 2.0 version
+
+2008-02-18	Mathieu CARBONNEAUX
+	* released mod_chroot/1.0beta1
+	* only apache 2.x
+	* transparente chroot (ChrootFixRoot option)
+	* chroot in child_init to fix all resiliante problem with apache 2.0 file open after chrooting...
 	* fixed a problem restart apache chrooted in moving chrooting a
 	  childinit phase. that fixed also most libraries problem, all module that are loader
 	  with apache no need to include librarie in the chroot.
-	* all file (pid, lockfile, scoreboard...) that are created in mpm phase are created outside the jail 
+	* all file (pid, lockfile, scoreboard, coredump...) that are created in mpm phase are created outside the jail 
 	  without probleme beceause the jail is setup at child_init phase...
 	* fixe documentroot problem with chroot that need to exist in chroot
 	  and outside the chroot : now when activate mod_chroot they set automaticly the chroot directory to the document root... 
@@ -32,4 +36,8 @@
 	  to fake all programme and module of apache. with that no more need to 
 	  trick with document root in chroot and outside chroot...
 	* fake also coredumpdirectory to permit core dump normaly if they are activated...
-	  
+
+2008-05-05	Mathieu CARBONNEAUX
+	* released mod_chroot/1.0beta2
+	* simplification, fixing some hints...
+	* clarifying...
